regression/field/rod_sphere/log.txt
/home/robertm/Projects/chombo-discharge/Chombo-3.3/lib/mk/Make.defs:35: warning: overriding recipe for target '.SUFFIXES'
/home/robertm/Projects/chombo-discharge/Chombo-3.3/lib/mk/Make.defs:35: warning: ignoring old recipe for target '.SUFFIXES'
Depending main.cpp ...
Depending /home/robertm/Projects/chombo-discharge/chombo-discharge/src/field_solver/field_solver_multigrid.cpp ...
Depending /home/robertm/Projects/chombo-discharge/chombo-discharge/src/rte_solver/eddington_sp1.cpp ...
Depending /home/robertm/Projects/chombo-discharge/chombo-discharge/src/elliptic/ebconductivityopfactory.cpp ...
Depending /home/robertm/Projects/chombo-discharge/chombo-discharge/src/elliptic/conductivitydomainbc_wrapper.cpp ...
Depending /home/robertm/Projects/chombo-discharge/chombo-discharge/src/elliptic/dirichletconductivityebbc.cpp ...
Depending /home/robertm/Projects/chombo-discharge/chombo-discharge/src/elliptic/mfconductivityop.cpp ...
Depending /home/robertm/Projects/chombo-discharge/chombo-discharge/src/elliptic/conductivitydomainbc_wrapper_factory.cpp ...
Depending /home/robertm/Projects/chombo-discharge/chombo-discharge/src/elliptic/ebconductivityop.cpp ...
Depending /home/robertm/Projects/chombo-discharge/chombo-discharge/src/elliptic/mfconductivityopfactory.cpp ...
Depending /home/robertm/Projects/chombo-discharge/chombo-discharge/src/elliptic/jump_bc.cpp ...
Depending /home/robertm/Projects/chombo-discharge/chombo-discharge/src/elliptic/mfdirichletconductivityebbc.cpp ...
Depending /home/robertm/Projects/chombo-discharge/chombo-discharge/src/driver/driver.cpp ...
Depending /home/robertm/Projects/chombo-discharge/chombo-discharge/src/driver/time_stepper.cpp ...
Depending /home/robertm/Projects/chombo-discharge/chombo-discharge/src/cell_tagger/cell_tagger.cpp ...
/home/robertm/Projects/chombo-discharge/Chombo-3.3/lib/mk/Make.defs:35: warning: overriding recipe for target '.SUFFIXES'
/home/robertm/Projects/chombo-discharge/Chombo-3.3/lib/mk/Make.defs:35: warning: ignoring old recipe for target '.SUFFIXES'
/home/robertm/Projects/chombo-discharge/Chombo-3.3/lib/mk/Make.defs:35: warning: overriding recipe for target '.SUFFIXES'
/home/robertm/Projects/chombo-discharge/Chombo-3.3/lib/mk/Make.defs:35: warning: ignoring old recipe for target '.SUFFIXES'
In file included from /home/robertm/Projects/chombo-discharge/chombo-discharge/src/field_solver/field_solver_multigrid.H:11:0,
                 from main.cpp:2:
/home/robertm/Projects/chombo-discharge/chombo-discharge/src/field_solver/field_solver.H:131:44: error: ‘amr_mesh’ was not declared in this scope
   virtual void set_amr(const RefCountedPtr<amr_mesh>& a_amr);
                                            ^~~~~~~~
/home/robertm/Projects/chombo-discharge/chombo-discharge/src/field_solver/field_solver.H:131:44: note: suggested alternative:
In file included from /home/robertm/Projects/chombo-discharge/chombo-discharge/src/driver/time_stepper.H:12:0,
                 from /home/robertm/Projects/chombo-discharge/chombo-discharge/src/driver/driver.H:14,
                 from main.cpp:1:
/home/robertm/Projects/chombo-discharge/chombo-discharge/src/amr_mesh/amr_mesh.H:46:9: note:   ‘ChomboDischarge::amr_mesh’
   class amr_mesh {
         ^~~~~~~~
In file included from /home/robertm/Projects/chombo-discharge/chombo-discharge/src/field_solver/field_solver_multigrid.H:11:0,
                 from main.cpp:2:
/home/robertm/Projects/chombo-discharge/chombo-discharge/src/field_solver/field_solver.H:131:52: error: template argument 1 is invalid
   virtual void set_amr(const RefCountedPtr<amr_mesh>& a_amr);
                                                    ^
/home/robertm/Projects/chombo-discharge/chombo-discharge/src/field_solver/field_solver.H:309:17: error: ‘amr_mesh’ was not declared in this scope
   RefCountedPtr<amr_mesh> m_amr;
                 ^~~~~~~~
/home/robertm/Projects/chombo-discharge/chombo-discharge/src/field_solver/field_solver.H:309:17: note: suggested alternative:
In file included from /home/robertm/Projects/chombo-discharge/chombo-discharge/src/driver/time_stepper.H:12:0,
                 from /home/robertm/Projects/chombo-discharge/chombo-discharge/src/driver/driver.H:14,
                 from main.cpp:1:
/home/robertm/Projects/chombo-discharge/chombo-discharge/src/amr_mesh/amr_mesh.H:46:9: note:   ‘ChomboDischarge::amr_mesh’
   class amr_mesh {
         ^~~~~~~~
In file included from /home/robertm/Projects/chombo-discharge/chombo-discharge/src/field_solver/field_solver_multigrid.H:11:0,
                 from main.cpp:2:
/home/robertm/Projects/chombo-discharge/chombo-discharge/src/field_solver/field_solver.H:309:25: error: template argument 1 is invalid
   RefCountedPtr<amr_mesh> m_amr;
                         ^
In file included from main.cpp:2:0:
/home/robertm/Projects/chombo-discharge/chombo-discharge/src/field_solver/field_solver_multigrid.H:50:17: error: ‘mfconductivityopfactory’ was not declared in this scope
   RefCountedPtr<mfconductivityopfactory>& get_opfact(){
                 ^~~~~~~~~~~~~~~~~~~~~~~
/home/robertm/Projects/chombo-discharge/chombo-discharge/src/field_solver/field_solver_multigrid.H:50:17: note: suggested alternative:
In file included from /home/robertm/Projects/chombo-discharge/chombo-discharge/src/field_solver/field_solver_multigrid.H:12:0,
                 from main.cpp:2:
/home/robertm/Projects/chombo-discharge/chombo-discharge/src/elliptic/mfconductivityopfactory.H:41:9: note:   ‘ChomboDischarge::mfconductivityopfactory’
   class mfconductivityopfactory : public AMRLevelOpFactory<LevelData<MFCellFAB> > {
         ^~~~~~~~~~~~~~~~~~~~~~~
In file included from main.cpp:2:0:
/home/robertm/Projects/chombo-discharge/chombo-discharge/src/field_solver/field_solver_multigrid.H:50:40: error: template argument 1 is invalid
   RefCountedPtr<mfconductivityopfactory>& get_opfact(){
                                        ^
/home/robertm/Projects/chombo-discharge/chombo-discharge/src/field_solver/field_solver_multigrid.H:312:17: error: ‘mfconductivityopfactory’ was not declared in this scope
   RefCountedPtr<mfconductivityopfactory> m_opfact;
                 ^~~~~~~~~~~~~~~~~~~~~~~
/home/robertm/Projects/chombo-discharge/chombo-discharge/src/field_solver/field_solver_multigrid.H:312:17: note: suggested alternative:
In file included from /home/robertm/Projects/chombo-discharge/chombo-discharge/src/field_solver/field_solver_multigrid.H:12:0,
                 from main.cpp:2:
/home/robertm/Projects/chombo-discharge/chombo-discharge/src/elliptic/mfconductivityopfactory.H:41:9: note:   ‘ChomboDischarge::mfconductivityopfactory’
   class mfconductivityopfactory : public AMRLevelOpFactory<LevelData<MFCellFAB> > {
         ^~~~~~~~~~~~~~~~~~~~~~~
In file included from main.cpp:2:0:
/home/robertm/Projects/chombo-discharge/chombo-discharge/src/field_solver/field_solver_multigrid.H:312:40: error: template argument 1 is invalid
   RefCountedPtr<mfconductivityopfactory> m_opfact;
                                        ^
In file included from /home/robertm/Projects/chombo-discharge/chombo-discharge/physics/field/field_stepper.H:13:0,
                 from main.cpp:4:
/home/robertm/Projects/chombo-discharge/chombo-discharge/src/sigma_solver/sigma_solver.H:78:44: error: ‘amr_mesh’ was not declared in this scope
   virtual void set_amr(const RefCountedPtr<amr_mesh>& a_amr);
                                            ^~~~~~~~
/home/robertm/Projects/chombo-discharge/chombo-discharge/src/sigma_solver/sigma_solver.H:78:44: note: suggested alternative:
In file included from /home/robertm/Projects/chombo-discharge/chombo-discharge/src/driver/time_stepper.H:12:0,
                 from /home/robertm/Projects/chombo-discharge/chombo-discharge/src/driver/driver.H:14,
                 from main.cpp:1:
/home/robertm/Projects/chombo-discharge/chombo-discharge/src/amr_mesh/amr_mesh.H:46:9: note:   ‘ChomboDischarge::amr_mesh’
   class amr_mesh {
         ^~~~~~~~
In file included from /home/robertm/Projects/chombo-discharge/chombo-discharge/physics/field/field_stepper.H:13:0,
                 from main.cpp:4:
/home/robertm/Projects/chombo-discharge/chombo-discharge/src/sigma_solver/sigma_solver.H:78:52: error: template argument 1 is invalid
   virtual void set_amr(const RefCountedPtr<amr_mesh>& a_amr);
                                                    ^
/home/robertm/Projects/chombo-discharge/chombo-discharge/src/sigma_solver/sigma_solver.H:176:17: error: ‘amr_mesh’ was not declared in this scope
   RefCountedPtr<amr_mesh> m_amr;
                 ^~~~~~~~
/home/robertm/Projects/chombo-discharge/chombo-discharge/src/sigma_solver/sigma_solver.H:176:17: note: suggested alternative:
In file included from /home/robertm/Projects/chombo-discharge/chombo-discharge/src/driver/time_stepper.H:12:0,
                 from /home/robertm/Projects/chombo-discharge/chombo-discharge/src/driver/driver.H:14,
                 from main.cpp:1:
/home/robertm/Projects/chombo-discharge/chombo-discharge/src/amr_mesh/amr_mesh.H:46:9: note:   ‘ChomboDischarge::amr_mesh’
   class amr_mesh {
         ^~~~~~~~
In file included from /home/robertm/Projects/chombo-discharge/chombo-discharge/physics/field/field_stepper.H:13:0,
                 from main.cpp:4:
/home/robertm/Projects/chombo-discharge/chombo-discharge/src/sigma_solver/sigma_solver.H:176:25: error: template argument 1 is invalid
   RefCountedPtr<amr_mesh> m_amr;
                         ^
In file included from main.cpp:4:0:
/home/robertm/Projects/chombo-discharge/chombo-discharge/physics/field/field_stepper.H:22:46: error: expected class-name before ‘{’ token
     class field_stepper : public time_stepper{
                                              ^
/home/robertm/Projects/chombo-discharge/chombo-discharge/physics/field/field_stepper.H:46:35: error: ‘time_code’ has not been declared
       void compute_dt(Real& a_dt, time_code& a_timecode) override {a_dt = 0.0;}
                                   ^~~~~~~~~
/home/robertm/Projects/chombo-discharge/chombo-discharge/physics/field/field_stepper.H:76:7: error: ‘box_sorting’ does not name a type
       box_sorting m_boxsort;
       ^~~~~~~~~~~
In file included from /home/robertm/Projects/chombo-discharge/chombo-discharge/physics/field/field_stepper.H:89:0,
                 from main.cpp:4:
/home/robertm/Projects/chombo-discharge/chombo-discharge/physics/field/field_stepperI.H: In constructor ‘physics::poisson::field_stepper<T>::field_stepper()’:
/home/robertm/Projects/chombo-discharge/chombo-discharge/physics/field/field_stepperI.H:28:7: error: ‘m_verbosity’ was not declared in this scope
       m_verbosity = -1;
       ^~~~~~~~~~~
/home/robertm/Projects/chombo-discharge/chombo-discharge/physics/field/field_stepperI.H:40:2: error: ‘m_boxsort’ was not declared in this scope
  m_boxsort = box_sorting::none;
  ^~~~~~~~~
/home/robertm/Projects/chombo-discharge/chombo-discharge/physics/field/field_stepperI.H:40:14: error: ‘box_sorting’ has not been declared
  m_boxsort = box_sorting::none;
              ^~~~~~~~~~~
/home/robertm/Projects/chombo-discharge/chombo-discharge/physics/field/field_stepperI.H:43:2: error: ‘m_boxsort’ was not declared in this scope
  m_boxsort = box_sorting::std;
  ^~~~~~~~~
/home/robertm/Projects/chombo-discharge/chombo-discharge/physics/field/field_stepperI.H:43:14: error: ‘box_sorting’ has not been declared
  m_boxsort = box_sorting::std;
              ^~~~~~~~~~~
/home/robertm/Projects/chombo-discharge/chombo-discharge/physics/field/field_stepperI.H:46:2: error: ‘m_boxsort’ was not declared in this scope
  m_boxsort = box_sorting::shuffle;
  ^~~~~~~~~
/home/robertm/Projects/chombo-discharge/chombo-discharge/physics/field/field_stepperI.H:46:14: error: ‘box_sorting’ has not been declared
  m_boxsort = box_sorting::shuffle;
              ^~~~~~~~~~~
/home/robertm/Projects/chombo-discharge/chombo-discharge/physics/field/field_stepperI.H:49:2: error: ‘m_boxsort’ was not declared in this scope
  m_boxsort = box_sorting::morton;
  ^~~~~~~~~
/home/robertm/Projects/chombo-discharge/chombo-discharge/physics/field/field_stepperI.H:49:14: error: ‘box_sorting’ has not been declared
  m_boxsort = box_sorting::morton;
              ^~~~~~~~~~~
/home/robertm/Projects/chombo-discharge/chombo-discharge/physics/field/field_stepperI.H: In member function ‘void physics::poisson::field_stepper<T>::setup_solvers()’:
/home/robertm/Projects/chombo-discharge/chombo-discharge/physics/field/field_stepperI.H:66:32: error: ‘m_verbosity’ was not declared in this scope
       m_poisson->set_verbosity(m_verbosity);
                                ^~~~~~~~~~~
/home/robertm/Projects/chombo-discharge/chombo-discharge/physics/field/field_stepperI.H:68:26: error: ‘m_amr’ was not declared in this scope
       m_poisson->set_amr(m_amr);
                          ^~~~~
/home/robertm/Projects/chombo-discharge/chombo-discharge/physics/field/field_stepperI.H:69:45: error: ‘m_compgeom’ was not declared in this scope
       m_poisson->set_computational_geometry(m_compgeom);
                                             ^~~~~~~~~~
/home/robertm/Projects/chombo-discharge/chombo-discharge/physics/field/field_stepperI.H: In member function ‘void physics::poisson::field_stepper<T>::register_realms()’:
/home/robertm/Projects/chombo-discharge/chombo-discharge/physics/field/field_stepperI.H:90:7: error: ‘m_amr’ was not declared in this scope
       m_amr->register_realm(m_realm);
       ^~~~~
/home/robertm/Projects/chombo-discharge/chombo-discharge/physics/field/field_stepperI.H: In member function ‘void physics::poisson::field_stepper<T>::synchronize_solver_times(int, Real, Real)’:
/home/robertm/Projects/chombo-discharge/chombo-discharge/physics/field/field_stepperI.H:172:7: error: ‘m_step’ was not declared in this scope
       m_step = a_step;
       ^~~~~~
/home/robertm/Projects/chombo-discharge/chombo-discharge/physics/field/field_stepperI.H:172:7: note: suggested alternative: ‘a_step’
       m_step = a_step;
       ^~~~~~
       a_step
/home/robertm/Projects/chombo-discharge/chombo-discharge/physics/field/field_stepperI.H:173:7: error: ‘m_time’ was not declared in this scope
       m_time = a_time;
       ^~~~~~
/home/robertm/Projects/chombo-discharge/chombo-discharge/physics/field/field_stepperI.H:173:7: note: suggested alternative: ‘mktime’
       m_time = a_time;
       ^~~~~~
       mktime
/home/robertm/Projects/chombo-discharge/chombo-discharge/physics/field/field_stepperI.H:174:7: error: ‘m_dt’ was not declared in this scope
       m_dt   = a_dt;
       ^~~~
/home/robertm/Projects/chombo-discharge/chombo-discharge/physics/field/field_stepperI.H:174:7: note: suggested alternative: ‘a_dt’
       m_dt   = a_dt;
       ^~~~
       a_dt
/home/robertm/Projects/chombo-discharge/chombo-discharge/physics/field/field_stepperI.H: In member function ‘void physics::poisson::field_stepper<T>::load_balance_boxes(Vector<Vector<int> >&, Vector<Vector<Box> >&, std::__cxx11::string, const Vector<DisjointBoxLayout>&, int, int)’:
/home/robertm/Projects/chombo-discharge/chombo-discharge/physics/field/field_stepperI.H:220:2: error: ‘m_amr’ was not declared in this scope
  m_amr->allocate(dummy1, m_realm, 1);
  ^~~~~
/home/robertm/Projects/chombo-discharge/chombo-discharge/physics/field/field_stepperI.H:233:16: error: ‘mfconductivityopfactory’ was not declared in this scope
  RefCountedPtr<mfconductivityopfactory>& factory = solver->get_opfact();
                ^~~~~~~~~~~~~~~~~~~~~~~
/home/robertm/Projects/chombo-discharge/chombo-discharge/physics/field/field_stepperI.H:233:16: note: suggested alternative:
In file included from /home/robertm/Projects/chombo-discharge/chombo-discharge/src/field_solver/field_solver_multigrid.H:12:0,
                 from main.cpp:2:
/home/robertm/Projects/chombo-discharge/chombo-discharge/src/elliptic/mfconductivityopfactory.H:41:9: note:   ‘ChomboDischarge::mfconductivityopfactory’
   class mfconductivityopfactory : public AMRLevelOpFactory<LevelData<MFCellFAB> > {
         ^~~~~~~~~~~~~~~~~~~~~~~
In file included from /home/robertm/Projects/chombo-discharge/chombo-discharge/physics/field/field_stepper.H:89:0,
                 from main.cpp:4:
/home/robertm/Projects/chombo-discharge/chombo-discharge/physics/field/field_stepperI.H:233:39: error: template argument 1 is invalid
  RefCountedPtr<mfconductivityopfactory>& factory = solver->get_opfact();
                                       ^
/home/robertm/Projects/chombo-discharge/chombo-discharge/physics/field/field_stepperI.H:238:30: error: ‘mfconductivityop’ was not declared in this scope
    auto oper = RefCountedPtr<mfconductivityop> ((mfconductivityop*) factory->MGnewOp(domains[lvl], 0, false));
                              ^~~~~~~~~~~~~~~~
/home/robertm/Projects/chombo-discharge/chombo-discharge/physics/field/field_stepperI.H:238:30: note: suggested alternative:
In file included from /home/robertm/Projects/chombo-discharge/chombo-discharge/src/elliptic/mfconductivityopfactory.H:11:0,
                 from /home/robertm/Projects/chombo-discharge/chombo-discharge/src/field_solver/field_solver_multigrid.H:12,
                 from main.cpp:2:
/home/robertm/Projects/chombo-discharge/chombo-discharge/src/elliptic/mfconductivityop.H:35:9: note:   ‘ChomboDischarge::mfconductivityop’
   class mfconductivityop : public TGAHelmOp<LevelData<MFCellFAB> >{
         ^~~~~~~~~~~~~~~~
In file included from /home/robertm/Projects/chombo-discharge/chombo-discharge/physics/field/field_stepper.H:89:0,
                 from main.cpp:4:
/home/robertm/Projects/chombo-discharge/chombo-discharge/physics/field/field_stepperI.H:238:46: error: template argument 1 is invalid
    auto oper = RefCountedPtr<mfconductivityop> ((mfconductivityop*) factory->MGnewOp(domains[lvl], 0, false));
                                              ^
/home/robertm/Projects/chombo-discharge/chombo-discharge/physics/field/field_stepperI.H:238:67: error: expected primary-expression before ‘)’ token
    auto oper = RefCountedPtr<mfconductivityop> ((mfconductivityop*) factory->MGnewOp(domains[lvl], 0, false));
                                                                   ^
In file included from /home/robertm/Projects/chombo-discharge/chombo-discharge/physics/field/field_stepper.H:89:0,
                 from main.cpp:4:
/home/robertm/Projects/chombo-discharge/chombo-discharge/physics/field/field_stepperI.H:259:4: error: ‘load_balance’ has not been declared
    load_balance::sort(a_boxes[lvl], loads, m_boxsort);
    ^~~~~~~~~~~~
/home/robertm/Projects/chombo-discharge/chombo-discharge/physics/field/field_stepperI.H:259:44: error: ‘m_boxsort’ was not declared in this scope
    load_balance::sort(a_boxes[lvl], loads, m_boxsort);
                                            ^~~~~~~~~
/home/robertm/Projects/chombo-discharge/chombo-discharge/physics/field/field_stepperI.H:268:4: error: ‘load_balance’ has not been declared
    load_balance::make_balance(a_procs[lvl], lloads, a_boxes[lvl]);
    ^~~~~~~~~~~~
main.cpp: In function ‘int main(int, char**)’:
main.cpp:21:17: error: ‘amr_mesh’ was not declared in this scope
   RefCountedPtr<amr_mesh> amr                    = RefCountedPtr<amr_mesh> (new amr_mesh());
                 ^~~~~~~~
main.cpp:21:17: note: suggested alternative:
In file included from /home/robertm/Projects/chombo-discharge/chombo-discharge/src/driver/time_stepper.H:12:0,
                 from /home/robertm/Projects/chombo-discharge/chombo-discharge/src/driver/driver.H:14,
                 from main.cpp:1:
/home/robertm/Projects/chombo-discharge/chombo-discharge/src/amr_mesh/amr_mesh.H:46:9: note:   ‘ChomboDischarge::amr_mesh’
   class amr_mesh {
         ^~~~~~~~
main.cpp:21:25: error: template argument 1 is invalid
   RefCountedPtr<amr_mesh> amr                    = RefCountedPtr<amr_mesh> (new amr_mesh());
                         ^
main.cpp:21:74: error: type/value mismatch at argument 1 in template parameter list for ‘template<class T, class OP> class RefCountedPtr’
   RefCountedPtr<amr_mesh> amr                    = RefCountedPtr<amr_mesh> (new amr_mesh());
                                                                          ^
main.cpp:21:74: note:   expected a type, got ‘amr_mesh’
main.cpp:21:81: error: expected type-specifier before ‘amr_mesh’
   RefCountedPtr<amr_mesh> amr                    = RefCountedPtr<amr_mesh> (new amr_mesh());
                                                                                 ^~~~~~~~
main.cpp:23:17: error: ‘cell_tagger’ was not declared in this scope
   RefCountedPtr<cell_tagger> tagger              = RefCountedPtr<cell_tagger> (NULL);
                 ^~~~~~~~~~~
main.cpp:23:17: note: suggested alternative:
In file included from /home/robertm/Projects/chombo-discharge/chombo-discharge/src/driver/driver.H:16:0,
                 from main.cpp:1:
/home/robertm/Projects/chombo-discharge/chombo-discharge/src/cell_tagger/cell_tagger.H:23:9: note:   ‘ChomboDischarge::cell_tagger’
   class cell_tagger {
         ^~~~~~~~~~~
main.cpp:23:28: error: template argument 1 is invalid
   RefCountedPtr<cell_tagger> tagger              = RefCountedPtr<cell_tagger> (NULL);
                            ^
main.cpp:23:77: error: type/value mismatch at argument 1 in template parameter list for ‘template<class T, class OP> class RefCountedPtr’
   RefCountedPtr<cell_tagger> tagger              = RefCountedPtr<cell_tagger> (NULL);
                                                                             ^
main.cpp:23:77: note:   expected a type, got ‘cell_tagger’
In file included from /home/robertm/Projects/chombo-discharge/chombo-discharge/physics/field/field_stepper.H:89:0,
                 from main.cpp:4:
/home/robertm/Projects/chombo-discharge/chombo-discharge/physics/field/field_stepper.H: In instantiation of ‘class physics::poisson::field_stepper<field_solver_multigrid>’:
main.cpp:27:49:   required from here
/home/robertm/Projects/chombo-discharge/chombo-discharge/physics/field/field_stepperI.H:63:10: error: ‘void physics::poisson::field_stepper<T>::setup_solvers() [with T = field_solver_multigrid]’ marked ‘override’, but does not override
     void field_stepper<T>::setup_solvers(){
          ^~~~~~~~~~~~~~~~
/home/robertm/Projects/chombo-discharge/chombo-discharge/physics/field/field_stepperI.H:100:10: error: ‘void physics::poisson::field_stepper<T>::initial_data() [with T = field_solver_multigrid]’ marked ‘override’, but does not override
     void field_stepper<T>::initial_data(){
          ^~~~~~~~~~~~~~~~
/home/robertm/Projects/chombo-discharge/chombo-discharge/physics/field/field_stepperI.H:134:10: error: ‘void physics::poisson::field_stepper<T>::post_initialize() [with T = field_solver_multigrid]’ marked ‘override’, but does not override
     void field_stepper<T>::post_initialize() {
          ^~~~~~~~~~~~~~~~
/home/robertm/Projects/chombo-discharge/chombo-discharge/physics/field/field_stepperI.H:94:10: error: ‘void physics::poisson::field_stepper<T>::allocate() [with T = field_solver_multigrid]’ marked ‘override’, but does not override
     void field_stepper<T>::allocate() {
          ^~~~~~~~~~~~~~~~
In file included from main.cpp:4:0:
/home/robertm/Projects/chombo-discharge/chombo-discharge/physics/field/field_stepper.H:39:12: error: ‘void physics::poisson::field_stepper<T>::write_checkpoint_data(HDF5Handle&, int) const [with T = field_solver_multigrid]’ marked ‘override’, but does not override
       void write_checkpoint_data(HDF5Handle& a_handle, const int a_lvl) const override{}
            ^~~~~~~~~~~~~~~~~~~~~
In file included from /home/robertm/Projects/chombo-discharge/chombo-discharge/physics/field/field_stepper.H:89:0,
                 from main.cpp:4:
/home/robertm/Projects/chombo-discharge/chombo-discharge/physics/field/field_stepperI.H:150:10: error: ‘void physics::poisson::field_stepper<T>::read_checkpoint_data(HDF5Handle&, int) [with T = field_solver_multigrid]’ marked ‘override’, but does not override
     void field_stepper<T>::read_checkpoint_data(HDF5Handle& a_handle, const int a_lvl){
          ^~~~~~~~~~~~~~~~
In file included from main.cpp:4:0:
/home/robertm/Projects/chombo-discharge/chombo-discharge/physics/field/field_stepper.H:41:12: error: ‘void physics::poisson::field_stepper<T>::post_checkpoint_setup() [with T = field_solver_multigrid]’ marked ‘override’, but does not override
       void post_checkpoint_setup() override {}
            ^~~~~~~~~~~~~~~~~~~~~
In file included from /home/robertm/Projects/chombo-discharge/chombo-discharge/physics/field/field_stepper.H:89:0,
                 from main.cpp:4:
/home/robertm/Projects/chombo-discharge/chombo-discharge/physics/field/field_stepperI.H:155:9: error: ‘int physics::poisson::field_stepper<T>::get_num_plot_vars() const [with T = field_solver_multigrid]’ marked ‘override’, but does not override
     int field_stepper<T>::get_num_plot_vars() const{
         ^~~~~~~~~~~~~~~~
/home/robertm/Projects/chombo-discharge/chombo-discharge/physics/field/field_stepperI.H:162:10: error: ‘void physics::poisson::field_stepper<T>::write_plot_data(EBAMRCellData&, Vector<std::__cxx11::basic_string<char> >&, int&) const [with T = field_solver_multigrid; EBAMRCellData = EBAMRData<EBCellFAB>]’ marked ‘override’, but does not override
     void field_stepper<T>::write_plot_data(EBAMRCellData& a_output, Vector<std::string>& a_plotvar_names, int& a_icomp) const{
          ^~~~~~~~~~~~~~~~
In file included from main.cpp:4:0:
/home/robertm/Projects/chombo-discharge/chombo-discharge/physics/field/field_stepper.H:46:12: error: ‘void physics::poisson::field_stepper<T>::compute_dt(Real&, int&) [with T = field_solver_multigrid; Real = double]’ marked ‘override’, but does not override
       void compute_dt(Real& a_dt, time_code& a_timecode) override {a_dt = 0.0;}
            ^~~~~~~~~~
In file included from /home/robertm/Projects/chombo-discharge/chombo-discharge/physics/field/field_stepper.H:89:0,
                 from main.cpp:4:
/home/robertm/Projects/chombo-discharge/chombo-discharge/physics/field/field_stepperI.H:144:10: error: ‘Real physics::poisson::field_stepper<T>::advance(Real) [with T = field_solver_multigrid; Real = double]’ marked ‘override’, but does not override
     Real field_stepper<T>::advance(const Real a_dt){
          ^~~~~~~~~~~~~~~~
/home/robertm/Projects/chombo-discharge/chombo-discharge/physics/field/field_stepperI.H:171:10: error: ‘void physics::poisson::field_stepper<T>::synchronize_solver_times(int, Real, Real) [with T = field_solver_multigrid; Real = double]’ marked ‘override’, but does not override
     void field_stepper<T>::synchronize_solver_times(const int a_step, const Real a_time, const Real a_dt){
          ^~~~~~~~~~~~~~~~
In file included from main.cpp:4:0:
/home/robertm/Projects/chombo-discharge/chombo-discharge/physics/field/field_stepper.H:49:12: error: ‘void physics::poisson::field_stepper<T>::print_step_report() [with T = field_solver_multigrid]’ marked ‘override’, but does not override
       void print_step_report() override {};
            ^~~~~~~~~~~~~~~~~
In file included from /home/robertm/Projects/chombo-discharge/chombo-discharge/physics/field/field_stepper.H:89:0,
                 from main.cpp:4:
/home/robertm/Projects/chombo-discharge/chombo-discharge/physics/field/field_stepperI.H:89:10: error: ‘void physics::poisson::field_stepper<T>::register_realms() [with T = field_solver_multigrid]’ marked ‘override’, but does not override
     void field_stepper<T>::register_realms(){
          ^~~~~~~~~~~~~~~~
/home/robertm/Projects/chombo-discharge/chombo-discharge/physics/field/field_stepperI.H:84:10: error: ‘void physics::poisson::field_stepper<T>::register_operators() [with T = field_solver_multigrid]’ marked ‘override’, but does not override
     void field_stepper<T>::register_operators(){
          ^~~~~~~~~~~~~~~~
In file included from main.cpp:4:0:
/home/robertm/Projects/chombo-discharge/chombo-discharge/physics/field/field_stepper.H:56:12: error: ‘bool physics::poisson::field_stepper<T>::need_to_regrid() [with T = field_solver_multigrid]’ marked ‘override’, but does not override
       bool need_to_regrid() override {return false;}
            ^~~~~~~~~~~~~~
In file included from /home/robertm/Projects/chombo-discharge/chombo-discharge/physics/field/field_stepper.H:89:0,
                 from main.cpp:4:
/home/robertm/Projects/chombo-discharge/chombo-discharge/physics/field/field_stepperI.H:178:10: error: ‘void physics::poisson::field_stepper<T>::pre_regrid(int, int) [with T = field_solver_multigrid]’ marked ‘override’, but does not override
     void field_stepper<T>::pre_regrid(const int a_lbase, const int a_old_finest_level){
          ^~~~~~~~~~~~~~~~
/home/robertm/Projects/chombo-discharge/chombo-discharge/physics/field/field_stepperI.H:184:10: error: ‘void physics::poisson::field_stepper<T>::deallocate() [with T = field_solver_multigrid]’ marked ‘override’, but does not override
     void field_stepper<T>::deallocate(){
          ^~~~~~~~~~~~~~~~
/home/robertm/Projects/chombo-discharge/chombo-discharge/physics/field/field_stepperI.H:199:10: error: ‘bool physics::poisson::field_stepper<T>::load_balance_realm(std::__cxx11::string) const [with T = field_solver_multigrid; std::__cxx11::string = std::__cxx11::basic_string<char>]’ marked ‘override’, but does not override
     bool field_stepper<T>::load_balance_realm(const std::string a_realm) const {
          ^~~~~~~~~~~~~~~~
/home/robertm/Projects/chombo-discharge/chombo-discharge/physics/field/field_stepperI.H:204:10: error: ‘void physics::poisson::field_stepper<T>::load_balance_boxes(Vector<Vector<int> >&, Vector<Vector<Box> >&, std::__cxx11::string, const Vector<DisjointBoxLayout>&, int, int) [with T = field_solver_multigrid; std::__cxx11::string = std::__cxx11::basic_string<char>]’ marked ‘override’, but does not override
     void field_stepper<T>::load_balance_boxes(Vector<Vector<int> >&            a_procs,
          ^~~~~~~~~~~~~~~~
/home/robertm/Projects/chombo-discharge/chombo-discharge/physics/field/field_stepperI.H:190:10: error: ‘void physics::poisson::field_stepper<T>::regrid(int, int, int) [with T = field_solver_multigrid]’ marked ‘override’, but does not override
     void field_stepper<T>::regrid(const int a_lmin, const int a_old_finest_level, const int a_new_finest_level){
          ^~~~~~~~~~~~~~~~
/home/robertm/Projects/chombo-discharge/chombo-discharge/physics/field/field_stepperI.H:139:10: error: ‘void physics::poisson::field_stepper<T>::post_regrid() [with T = field_solver_multigrid]’ marked ‘override’, but does not override
     void field_stepper<T>::post_regrid(){
          ^~~~~~~~~~~~~~~~
main.cpp:30:17: error: ‘driver’ was not declared in this scope
   RefCountedPtr<driver> engine = RefCountedPtr<driver> (new driver(compgeom, timestepper, amr, tagger, geocoarsen));
                 ^~~~~~
main.cpp:30:17: note: suggested alternative:
In file included from main.cpp:1:0:
/home/robertm/Projects/chombo-discharge/chombo-discharge/src/driver/driver.H:29:9: note:   ‘ChomboDischarge::driver’
   class driver {
         ^~~~~~
main.cpp:30:23: error: template argument 1 is invalid
   RefCountedPtr<driver> engine = RefCountedPtr<driver> (new driver(compgeom, timestepper, amr, tagger, geocoarsen));
                       ^
main.cpp:30:54: error: type/value mismatch at argument 1 in template parameter list for ‘template<class T, class OP> class RefCountedPtr’
   RefCountedPtr<driver> engine = RefCountedPtr<driver> (new driver(compgeom, timestepper, amr, tagger, geocoarsen));
                                                      ^
main.cpp:30:54: note:   expected a type, got ‘driver’
main.cpp:30:61: error: expected type-specifier before ‘driver’
   RefCountedPtr<driver> engine = RefCountedPtr<driver> (new driver(compgeom, timestepper, amr, tagger, geocoarsen));
                                                             ^~~~~~
main.cpp:31:9: error: base operand of ‘->’ is not a pointer
   engine->setup_and_run(input_file);
         ^~
/home/robertm/Projects/chombo-discharge/Chombo-3.3/lib/mk/Make.rules:517: recipe for target 'o/2d.Linux.64.mpicxx.gfortran.OPTHIGH.MPI/main.o' failed
make[1]: *** [o/2d.Linux.64.mpicxx.gfortran.OPTHIGH.MPI/main.o] Error 1
make[1]: *** Waiting for unfinished jobs....
/home/robertm/Projects/chombo-discharge/Chombo-3.3/lib/mk/Make.rules:425: recipe for target 'main' failed
make: *** [main] Error 2
